--- a/src/index.html
+++ b/src/index.html
@@ -6,30 +6,43 @@
     <title>Beaver game</title>
   </head>
   <body>
-    <div class="board">
-      <div class="board-row">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
+    <div class="game-box">
+      <h1>Strike the Goblin!</h1>
+      <div class="board">
+        <div class="board-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+        <div class="board-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+        <div class="board-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+        <div class="board-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
       </div>
-      <div class="board-row">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-      </div>
-      <div class="board-row">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-      </div>
-      <div class="board-row">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
+      <div class="control-box">
+        <div class="control">
+          <button id="start">Start game!</button>
+          <div class="info-box">
+            <div class="attempts info">Attempts: 0</div>
+            <div class="score info">Scores: 0</div>
+            <div class="message info">Go!</div>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="index.js"></script>
