--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beaver game</title>
+    <title>Gopher game</title>
   </head>
   <body>
     <div class="game-box">
-      <h1>Strike the Goblin!</h1>
+      <h1>Strike the Gopher!</h1>
       <div class="board">
         <div class="board-row">
             <div class="square"></div>
